test_regress/t/t_array_pattern_bad.out
%Error: t/t_array_pattern_bad.v:21:39: Assignment pattern key 'valids' not found as member
                                     : ... note: In instance 't'
   21 |   always_comb myinfo = '{default: '0, valids: '1};
      |                                       ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
